<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.jcieslak.airquality.ui.StationDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false">


        <TextView
            android:id="@+id/tv_empty_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:visibility="@{vm.noDataTextVisibility ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{vm.progressBarVisibility ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{vm.noDataTextVisibility ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/chart_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/container_pm10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sensor_pm10" />

                    <com.jcieslak.airquality.view.AnimatedGraph
                        android:id="@+id/graph_pm10"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_co2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sensor_co2" />

                    <com.jcieslak.airquality.view.AnimatedGraph
                        android:id="@+id/graph_co2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_no2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sensor_no2" />

                    <com.jcieslak.airquality.view.AnimatedGraph
                        android:id="@+id/graph_no2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_o3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sensor_o3" />

                    <com.jcieslak.airquality.view.AnimatedGraph
                        android:id="@+id/graph_o3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_so2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sensor_so2" />

                    <com.jcieslak.airquality.view.AnimatedGraph
                        android:id="@+id/graph_so2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_c6h6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sensor_c6h6" />

                    <com.jcieslak.airquality.view.AnimatedGraph
                        android:id="@+id/graph_c6h6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp" />
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>